5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1630_2927.log
== TEST (2019-04-02 16:20:57) 
-- CODE:
B=float(input("Insira o valor da bebida:")
E=float(input("Insira a quantidade de esfirra"))

e=1.50
valor= B+ e*E
print(valor)
-- ERROR:
File "XXXX", line 2
    E=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:21:02) 
-- CODE:
B=float(input("Insira o valor da bebida:"))
E=float(input("Insira a quantidade de esfirra"))

e=1.50
valor= B+ e*E
print(valor)
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:21:11) 
-- CODE:
B=float(input("Insira o valor da bebida:"))
E=float(input("Insira a quantidade de esfirra"))

e=1.50
valor= B+ e*E
print(valor)
-- EXECUTION TIME:
0.206896
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
7.5
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
9.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
10.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
